<resources>
    <string name="app_name">Netflix</string>
    <string name="house_of_cards">House of cards</string>
    <string name="s1_s2">S1:S2</string>
    <string name="todo">TODO</string>
    <string name="todoa">TODO</string>
    <string name="todos">TODO</string>
    <string name="todoss">TODO</string>
    <string name="menu_mensagen">Menu mensagen</string>
    <string name="menu_volume">Menu Volume</string>
    <string name="Menu_favorito">menu_favorito</string>
    <string name="menu_episodios">Menu Episodios</string>
</resources>